--- a/index.html
+++ b/index.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Blink</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mobile Responsive Website</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <div class="header">
-      <img src="logo.jpg" alt="Your Image">
+  <header>
+    <nav>
+      <input type="checkbox" id="menu-toggle" />
+      <label for="menu-toggle" class="menu-icon">&#9776;</label>
+      <ul class="menu">
+        <li><button id="button1">Button 1</button></li>
+        <li><button id="button2">Button 2</button></li>
+        <li><button id="button3">Button 3</button></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <div id="content1">
+      <h1>Title</h1>
+      <p>Some text some text some text some text some text...</p>
     </div>
 
-    <div class="tab-container">
-      <div class="tab">
-        <button id="tab1" onclick="toggleTab('tab1', 'content1')">Tab 1</button>
-      </div>
-      <div class="tab">
-        <button id="tab2" onclick="toggleTab('tab2', 'content2')">Tab 2</button>
-      </div>
-      <div class="tab">
-        <button id="tab3" onclick="toggleTab('tab3', 'content3')">Tab 3</button>
-      </div>
+    <div id="content2">
+      <h1>Title</h1>
+      <p>Some text some text some text some text some text...</p>
     </div>
 
-    <div class="content-container">
-      <div id="content1" class="tab-content">
-        <h2>Content for Tab 1</h2>
-        <p>This is the content for Tab 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dapibus quam sit amet iaculis suscipit.</p>
-      </div>
-      <div id="content2" class="tab-content">
-        <h2>Content for Tab 2</h2>
-        <p>This is the content for Tab 2. Sed ultricies semper faucibus. Phasellus eleifend turpis vitae ex posuere, nec efficitur justo lacinia.</p>
-      </div>
-      <div id="content3" class="tab-content">
-        <h2>Content for Tab 3</h2>
-        <p>This is the content for Tab 3. Fusce rutrum felis elit, in volutpat enim ullamcorper eu. Nam rhoncus arcu et est tristique, et pharetra massa hendrerit.</p>
-      </div>
+    <div id="content3">
+      <h1>Title</h1>
+      <p>Some text some text some text some text some text...</p>
     </div>
-  </div>
+  </main>
 
   <script src="script.js"></script>
 </body>
