--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mobile Responsive Website</title>
+  <title>Blink</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
