--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blink</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
+  <div class="top-bar">
+    <div class="top-bar-content">Blink - Dedetização</div>
+  </div>
+
   <header>
     <nav>
       <input type="checkbox" id="menu-toggle" />
-      <label for="menu-toggle" class="menu-icon">&#9776;</label>
+      <label for="menu-toggle" class="menu-icon"><i class="fas fa-bars"></i></label>
       <ul class="menu">
         <li><button id="button1">Sobre nós</button></li>
         <li><button id="button2">Button 2</button></li>
@@ -21,8 +26,8 @@
 
   <main>
     <div id="content1">
-      <h1>Sobre nós</h1>
-      <p>Nossa empresa tem como objetivo principal proteger a sua casa, empresa ou qualquer outra propriedade contra infestações de pragas que podem comprometer a saúde, a segurança e a tranquilidade dos ocupantes. Com anos de experiência no setor de dedetização, nos tornamos uma referência confiável na nossa área de atuação.</p>
+      <h1>Sobre nós</h1>  
+<p>Nossa empresa tem como objetivo principal proteger a sua casa, empresa ou qualquer outra propriedade contra infestações de pragas que podem comprometer a saúde, a segurança e a tranquilidade dos ocupantes. Com anos de experiência no setor de dedetização, nos tornamos uma referência confiável na nossa área de atuação.</p>
 
 <p>Nossa equipe é composta por profissionais altamente qualificados e treinados, que possuem amplo conhecimento em controle de pragas e utilizam as técnicas mais avançadas e produtos seguros para garantir resultados eficientes. Estamos comprometidos em fornecer um serviço personalizado, adaptado às necessidades específicas de cada cliente.</p>
 
