--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <label for="menu-toggle" class="menu-icon"><i class="fas fa-bars"></i></label>
       <ul class="menu">
         <li><button id="button1">Sobre nós</button></li>
-        <li><button id="button2">Button 2</button></li>
+        <li><button id="button2">Nossos serviços</button></li>
         <li><button id="button3">Button 3</button></li>
       </ul>
     </nav>
@@ -41,8 +41,28 @@
     </div>
 
     <div id="content2">
-      <h1>Title</h1>
-      <p>Some text some text some text some text some text...</p>
+      <h1>Sobre nossos serviços de dedetização</h1>
+      <p>Nossa empresa de dedetização possui uma abordagem abrangente no controle de pragas e oferece soluções eficazes para uma variedade de animais indesejados. Compreendemos que cada situação é única e adaptamos nossos métodos para atender às necessidades específicas de cada cliente. A seguir, explicaremos como lidamos com diferentes tipos de pragas e dois animais adicionais:</p>
+
+      <p>1. Cupins: O combate aos cupins varia dependendo de onde a infestação começou. Se os cupins estiverem surgindo de baixo, utilizamos técnicas de barreira química no solo ao redor da estrutura para evitar sua progressão. No caso de cupins que começaram o ataque por cima, aplicamos métodos de controle direcionados às áreas afetadas.</p>
+
+      <p>2. Moscas: Devido à natureza aérea das moscas, é importante destacar que não é possível eliminá-las por completo. No entanto, com nossos serviços de dedetização, podemos reduzir significativamente a população de moscas dentro de um ambiente. Utilizamos métodos como armadilhas, pulverização de inseticidas e orientações sobre medidas preventivas para minimizar sua presença.</p>
+
+      <p>3. Baratas: As baratas são pragas comuns em muitos ambientes e sua manifestação pode variar dependendo da espécie. As baratas menores tendem a se reproduzir e se manifestar em maior quantidade. Para o controle desses insetos, utilizamos técnicas de pulverização de inseticidas específicos para baratas, bem como orientações sobre higiene e medidas preventivas para evitar sua proliferação.</p>
+
+      <p>4. Escorpiões: O controle de escorpiões está relacionado à presença de entulhos próximos à residência e à higienização adequada do ambiente. Esses aracnídeos geralmente surgem de esgotos e se alimentam de baratas. Portanto, além da dedetização direcionada aos escorpiões, é essencial eliminar as condições favoráveis ao seu aparecimento, como entulhos e abrigo. Recomendamos também medidas de proteção, como telas de proteção em janelas e vedação de frestas.</p>
+
+      <p>5. Carrapatos/Pulgas: A presença de cães ou histórico de animais de estimação na residência, bem como a proximidade de locais com animais, pode influenciar a infestação de carrapatos e pulgas. Antes de realizar a dedetização, é importante garantir que os cães estejam protegidos e recebam tratamento adequado contra esses parasitas. Em seguida, aplicamos métodos de controle, como pulverização de inseticidas específicos, visando eliminar completamente essas pragas.</p>
+
+      <p>6. Formigas: Existem diferentes espécies de formigas, e o ambiente em que você se encontra pode influenciar sua manifestação. Se o seu quintal é de terra ou se há terrenos baldios ou casas desocupadas nas proximidades, isso pode atrair formigas. Para controlar as formigas, empregamos técnicas de iscas atrativas e pulverização direcionada para áreas de infestação, além de fornecer orientações sobre medidas preventivas, como manter a limpeza e vedar possíveis pontos de entrada.</p>
+
+      <p>7. Morcegos/Pombos: Para a expulsão desses animais, utilizamos substâncias em gel ou líquido que são aplicadas em locais estratégicos para afugentá-los. Esses métodos não causam danos aos morcegos e pombos, mas os incentivam a buscar abrigo em outros locais, evitando que voltem para a área tratada. Além disso, realizamos a limpeza adequada das fezes desses animais, pois podem conter doenças.</p>
+
+      <p>Nossa equipe de profissionais altamente treinados e experientes está preparada para identificar e tratar cada tipo de infestação com eficácia. Além disso, oferecemos orientações sobre medidas preventivas que você pode adotar para minimizar o retorno das pragas após o serviço de dedetização.</p>
+
+      <p>É importante ressaltar que nossa empresa está comprometida em adotar práticas seguras e humanas no controle de pragas. Nossos profissionais qualificados têm conhecimento especializado e habilidades para lidar com essas situações de forma ética e eficaz.</p>
+
+      <p>Se você estiver enfrentando problemas com cupins, moscas, baratas, escorpiões, carrapatos, pulgas, formigas, morcegos, pombos ou qualquer outra praga, entre em contato conosco para obter mais informações sobre nossos serviços de dedetização. Estamos prontos para ajudá-lo a resolver essas questões indesejadas de maneira responsável e profissional.</p>
     </div>
 
     <div id="content3">
