--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blink</title>
+  <title>Blink - Dedetizadora de Pragas</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
   <div class="top-bar">
-    <div class="top-bar-content">Blink - Dedetização</div>
+    <div class="top-bar-content">Blink - Dedetizadora de Pragas</div>
   </div>
 
   <header>
@@ -19,7 +19,7 @@
       <ul class="menu">
         <li><button id="button1">Sobre nós</button></li>
         <li><button id="button2">Nossos serviços</button></li>
-        <li><button id="button3">Button 3</button></li>
+        <li><button id="button3">Contato</button></li>
       </ul>
     </nav>
   </header>
@@ -66,8 +66,12 @@
     </div>
 
     <div id="content3">
-      <h1>Title</h1>
-      <p>Some text some text some text some text some text...</p>
+      <h1>Contato</h1>
+      <p>Entre em contato conosco pelo Whatsapp para obter informações sobre nossos serviços de dedetização: (84) 99914-6847 / (84) 98703-6847.</p>
+
+      <p>Nossa equipe experiente oferece soluções eficazes para lidar com pragas como insetos, roedores e cupins. Priorizamos o atendimento personalizado e garantimos resultados satisfatórios. Além disso, nossa empresa é comprometida com a segurança e o meio ambiente. Agende uma visita para análise e eliminação completa das pragas. Seu bem-estar é nossa prioridade. Não espere mais, contate-nos hoje mesmo.</p>
+
+      <p>Blink - Dedetizadora de Pragas</p>
     </div>
   </main>
 
