--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <div class="top-bar">
-    <div class="top-bar-content">Blink - Dedetizadora de Pragas</div>
+    <div class="top-bar-content">Blink</div>
+    <div class="top-bar-content">Dedetizadora de Pragas</div>
   </div>
 
   <header>
