--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blink - Dedetizadora de Pragas</title>
+  <title>Blink - Dedetizadora</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
   <div class="top-bar">
-    <div class="top-bar-content">Blink</div>
-    <div class="top-bar-content">Dedetizadora de Pragas</div>
+    <div class="top-bar-content">Blink - Dedetizadora</div>
   </div>
 
   <header>
@@ -72,7 +71,7 @@
 
       <p>Nossa equipe experiente oferece soluções eficazes para lidar com pragas como insetos, roedores e cupins. Priorizamos o atendimento personalizado e garantimos resultados satisfatórios. Além disso, nossa empresa é comprometida com a segurança e o meio ambiente. Agende uma visita para análise e eliminação completa das pragas. Seu bem-estar é nossa prioridade. Não espere mais, contate-nos hoje mesmo.</p>
 
-      <p>Blink - Dedetizadora de Pragas</p>
+      <p>Blink - Dedetizadora</p>
     </div>
   </main>
 
