--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 
     <div id="content3">
       <h1>Contato</h1>
-      <p>Entre em contato conosco pelo Whatsapp para obter informações sobre nossos serviços de dedetização:</p>
+      <p>Entre em contato conosco pelo para obter informações sobre nossos serviços de dedetização:</p>
+
+      <p>Nossos telefones: (84) 99914-6847 / (84) 98703-6847 </p>
 
       <p><a href="https://wa.me/5584999146847?text=Ol%C3%A1!%20Vim%20conversar%20com%20voc%C3%AA%20a%20respeito%20dos%20seus%20servi%C3%A7os%20de%20dedetiza%C3%A7%C3%A3o." target="_blank">Whatsapp 1</a></p>
 
