--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
       <h1>Contato</h1>
       <p>Entre em contato conosco pelo para obter informações sobre nossos serviços de dedetização:</p>
 
-      <p>Nossos telefones: (84) 99914-6847 / (84) 98703-6847 </p>
+      <p>Nossos telefones:</p>
+
+      <p>(84) 99914-6847</p>
+
+      <p>(84) 98703-6847</p>
 
       <p>Ou contate-nos via Whatsapp:</p>
 
